new use for old package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,6 @@ export(SampSNP)
 export(drawtangle)
 export(finddistance)
 export(maketree)
-export(microtree)
 export(snpcor)
 export(snpcor.best)
+export(traittree)
